# rainbowraycamera-project

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ktvincco/rainbowraycamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  README.md  RunTestBuild.sh  native-lib.cpp  run_tests.cpp  test_force_stop.py
app/src/main/cpp/src/: automatic_controller.cpp  automatic_controller.h  custom_logger.cpp  custom_logger.h  image_processing.cpp  image_processing.h  rotateImage.cpp  rotateImage.h  settings.cpp  settings.h
app/src/main/cpp/src/automatic_controller/: auto_exposition.cpp  auto_exposition.h  auto_focus.cpp  auto_focus.h
app/src/main/cpp/src/image_processing/: auto_adjust_image.cpp  auto_adjust_image.h  crop_result_image.cpp  crop_result_image.h  make_composite_image.cpp  make_composite_image.h  merge_images.cpp  merge_images.h
app/src/main/cpp/src/util/: data_file.cpp  data_file.h  image_base.cpp  image_base.h
app/src/main/java/com/ktvincco/rainbowraycamera/: AppSettings.kt  MainActivity.kt
app/src/main/java/com/ktvincco/rainbowraycamera/data/: AutomaticController.kt  CameraController.kt  CameraService.kt  DataSaver.kt  PermissionController.kt  SoundPlayer.kt
app/src/main/java/com/ktvincco/rainbowraycamera/data/util/: CameraConfiguration.kt  CaptureOptions.kt
app/src/main/java/com/ktvincco/rainbowraycamera/domain/: Camera.kt  Gallery.kt  Main.kt  Startup.kt
app/src/main/java/com/ktvincco/rainbowraycamera/presentation/: ModelData.kt  UiEventHandler.kt
app/src/main/java/com/ktvincco/rainbowraycamera/ui/: AboutApp.kt  AccessDeniedScreen.kt  BenchmarkScreen.kt  CameraControl.kt  CameraPreview.kt  EnableFlashlightOption.kt  Gallery.kt  Root.kt  StartupScreen.kt  UpdateRequired.kt  UserInterface.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/ktvincco/rainbowraycamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
